--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -41,3 +41,11 @@ scrape_configs:
       - source_labels: [__address__]
         target_label: instance
         replacement: "host-machine"  # Change to a custom label if desired
+
+  # BTC wallet exporter (your custom Go service)
+  - job_name: "btc-wallet-exporter"
+    scrape_interval: 30s
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["btc-wallet-exporter:9108"]  # compose service name + port
+
