--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -106,6 +106,22 @@ services:
     networks:
       - monitoring
 
+  victoria-metrics:
+    image: victoriametrics/victoria-metrics:latest
+    container_name: victoria-metrics
+    restart: unless-stopped
+    command:
+      - -retentionPeriod=5y            # keep 5 years; pick your horizon
+      - -selfScrapeInterval=0s        # optional, reduces self-metrics noise
+    ports:
+      - "8428:8428"                   # HTTP API (write/read/UI)
+    volumes:
+      - vm-data:/storage              # persistent TSDB data
+    networks:
+      - monitoring
+
+
+
 networks:
   monitoring:
     driver: bridge
@@ -114,3 +130,4 @@ volumes:
   prometheus-data:
   grafana-data:
   alertmanager-data:
+  vm-data:
