--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -58,6 +58,8 @@ services:
     container_name: promtail
     restart: unless-stopped
     command: [ "-config.file=/etc/promtail/promtail-config.yml" ]
+    ports:
+        - "9080:9080"
     volumes:
       # Read Docker logs (json-file driver)
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
@@ -156,6 +158,40 @@ services:
       - vm-data:/storage              # persistent TSDB data
     networks:
       - monitoring
+
+  news-ingester:
+    image: python:3.12-alpine
+    container_name: news-ingester
+    restart: unless-stopped
+    working_dir: /app
+    environment:
+      NEWSDATA_API_KEY: ${NEWSDATA_API_KEY}
+      LOKI_URL: ${LOKI_URL}         # e.g., http://loki:3100/loki/api/v1/push
+      TENANT_ID: main         # omit if auth_enabled: false in Loki
+    entrypoint: ["/bin/sh","-lc"]
+    command: 
+      - |
+        pip install --no-cache-dir requests vaderSentiment && \
+        while :; do \
+          echo "[news-ingester] run at $(date -Iseconds)"; \
+          python /app/newsdata_to_loki.py \
+          --api-key "${NEWSDATA_API_KEY}" \
+          --q bitcoin \
+          --pages 2 \
+          --loki-url "${LOKI_URL}" \
+          --tenant "${TENANT_ID}" \
+          --labels env=prod source=newsdata \
+          --use-sentiment \
+          --emit-metrics \
+          --vm-url http://victoria-metrics:8428 
+          echo "[news-ingester] finished at $(date -Iseconds)"
+          sleep 900;
+        done
+    volumes:
+      - ./ingester/newsdata_to_loki.py:/app/newsdata_to_loki.py:ro
+    networks:
+      - monitoring
+
 
 
 
