--- a/monitoring/loki/loki-config.yml
+++ b/monitoring/loki/loki-config.yml
@@ -46,7 +46,8 @@ limits_config:
   ingestion_burst_size_mb: 32
   max_cache_freshness_per_query: 10m
   retention_period: 365d   # keep logs for 1 year (adjust as desired)
-
+  volume_enabled: true     # enable volume-based limits
+  
 chunk_store_config:
   max_look_back_period: 365d
 
